z-index issue cost calculator

--- a/css/style.css
+++ b/css/style.css
@@ -814,7 +814,7 @@ i.far.fa-square {
 }
 .cost-analytics-dropdown {
     width: 172px;
-    z-index: 1006;
+    z-index: 3;
     float: right;
     position: absolute;
     right: 10px;
@@ -853,7 +853,7 @@ i.far.fa-square {
     text-align: center; 
     float: left;
     position: relative;
-    z-index: 10;
+    z-index: 3;
     margin: 10px auto;
 }
 .body-container.expand.dyna {
